--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     .accordion-item {
-      background-color: #0b3791;
+      background-color: #0f1b2c;
       margin-bottom: 20px;
       border: 1px solid #100e34;
       border-radius: 5px;
@@ -53,7 +53,7 @@
 
     .accordion-item .accordion-title i.fa-chevron-down.chevron-top {
       transform: rotate(-180deg);
-      color: #fa5019;
+      color: #a2a2a2;
     }
 
     .accordion-item .accordion-content {
@@ -62,7 +62,7 @@
       padding: 20px;
       background-color: #ffffff;
       border-radius: 0 0 5px 5px;
-    color: #100e34;
+      color: #100e34;
     }
 
     .accordion-item .accordion-content.active {
@@ -113,71 +113,60 @@
    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <section id="faq">
     <div class="container faq">
-
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="accordions">
               <div class="accordion-item">
                 <div class="accordion-title" data-tab="item1">
-                  <h3>Why FutureRDP? <i class="fa fa-chevron-down"></i></h3>
+                  <h3>What is Paper online tutoring?<i class="fa fa-chevron-down"></i></h3>
                 </div>
                 <div class="accordion-content" id="item1">
-                  <p>
-                    FutureRDP provides cheap and affordable Linux and Windows VPS servers and
-                    storage solution since 2008 for more than 11 years in multiple locations such as
-                    the United States, UK, France, Germany, Netherlands, and Canada. We have a range
-                    of different solutions for different purposes such as SSD VPS and Storage
-                    servers. All servers are equipped with RAID10 only SSD drives and FREE DDoS
-                    Protection!
-                  </p>
+                  <p>Paper partners with school districts to deliver 1:1 tutoring that is equitable, scalable, and cost-effective. Students get unlimited 24/7 live help and writing feedback, teachers get insights to tackle individual learning gaps, and administrators get actionable data to inform strategic decisions. Paper’s multilingual tutors add an extra layer of support across all content areas and grade levels, in and out of the classroom— so students always have access to expert help exactly when, where, and how they need it.</p>
                 </div>
               </div>
-
               <div class="accordion-item">
                 <div class="accordion-title" data-tab="item2">
-                  <h3>What is Windows VPS? <i class="fa fa-chevron-down"></i></h3>
+                  <h3>Who are Paper’s tutors?<i class="fa fa-chevron-down"></i></h3>
                 </div>
                 <div class="accordion-content" id="item2">
-                  <p>
-                    With a Windows VPS server, you will get a Remote Desktop connection within a few
-                    minutes. You can run Windows applications such as IIS, SQL, Microsoft Exchange
-                    or any software like Docking, Forex trading, Crypto Trading etc… or anything
-                    which you wish for. Just like your own computer!! but the difference is online
-                    24/7 days without interruptions and with a super fast Internet connection!
-                  </p>
+                  <p>Paper carefully selects every member of our diverse and multilingual team of tutors to
+                    ensure students get the very best help. We hire high-performing college students, PhD candidates, and teachers with expertise across K-12 subject areas.</p>
                 </div>
               </div>
-
               <div class="accordion-item">
                 <div class="accordion-title" data-tab="item3">
-                  <h3>Payment Options <i class="fa fa-chevron-down"></i></h3>
+                  <h3>Are Paper tutors free?<i class="fa fa-chevron-down"></i></h3>
                 </div>
                 <div class="accordion-content" id="item3">
-                  <p>
-                    Unlike most other providers you don’t have to pay with just Credit Card or
-                    PayPal. You can also pay with Bitcoin, Alt Coins like Ethereum or Litecoin,
-                    PerfectMoney, Payza and of course you can still pay by PayPal and Credit Cards.
-                    You even get more discounts when you choose longer-term commitments like our
-                    attractive yearly plans.
-                  </p>
+                  <p>Paper believes every student should have access to the support they need—anytime, anywhere. We also believe that the burden of providing this support shouldn’t be on teachers or parents. Paper partners with school systems to deliver 24/7, unlimited, and multilingual tutoring—at no cost to families.</p>
                 </div>
               </div>
-
               <div class="accordion-item">
                 <div class="accordion-title" data-tab="item4">
-                  <h3>Free DDOS Protection <i class="fa fa-chevron-down"></i></h3>
+                  <h3>How do I check if I have access to Paper?<i class="fa fa-chevron-down"></i></h3>
                 </div>
                 <div class="accordion-content" id="item4">
-                  <p>
-                    Unlike other providers who charge extra for DDoS protection, All of our VPS
-                    servers comes with DDoS protection for FREE. This means you do not have to worry
-                    about your VPS performance at all. We are taking care of your needs while you do
-                    focus on your business!
-                  </p>
+                  <p>Check out our access lookup tool to see if you have access to Paper through your school district or state.</p>
                 </div>
               </div>
-
+              <div class="accordion-item">
+                <div class="accordion-title" data-tab="item5">
+                  <h3>Is Paper tutoring legit?<i class="fa fa-chevron-down"></i></h3>
+                </div>
+                <div class="accordion-content" id="item5">
+                  <p>Yes! Paper is currently partnered with hundreds of school systems across North America, serving nearly 2.5 million students on our 24/7 academic support platform. Learn more about Paper's impact here.</p>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <div class="accordion-title" data-tab="item6">
+                  <h3>How does Paper tutoring work?<i class="fa fa-chevron-down"></i></h3>
+                </div>
+                <div class="accordion-content" id="item6">
+                  <p>Paper offers free, 24/7 chat-based tutoring for students in English, Spanish, French, and Mandarin. Tutors are available on-demand for unlimited, 1:1 support in any K-12 subject area. Based on a student’s question, grade level, and language preference, Paper pairs students with the best tutor to meet their needs within 30 seconds. Transcripts of each tutoring session are saved for students whenever they need to revise concepts.</p>
+                  <p>Along with live help, Paper also offers an asynchronous essay review tool that allows students to receive annotated feedback on content, grammar, and structure.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
