--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
       font-size: 16px;
       line-height: 1.7em;
     }
-
+   
+    @media screen and (min-width: 1000px) {
+      .accordions {
+        width: 50%;
+    }
+    }
   </style>
 </head>
 <body>
